# Clouduccaneer

./: .coverage  .gitignore  =3.0  CLI.md.sh  Makefile  QUICKSTART_WEB.md  README.md  WEB_UI.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  sitecustomize.py
.github/workflows/: ci.yml
examples/: config.sample.yaml  config.spotify.yaml  conversation_example.json
src/cb/: bpm.py  cli.py  renamer.py  spotwrap.py  utils.py  ytwrap.py
src/cb/web/: __init__.py  app.py
src/cb/web/static/css/: style.css
src/cb/web/static/js/: app.js
src/cb/web/templates/: index.html
src/cloudbuccaneer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/numpy/: __init__.py
src/typer/: __init__.py  testing.py
tests/: __init__.py  conftest.py  test_bpm.py  test_cli.py  test_integration.py  test_renamer.py  test_renamer.py.backup  test_renamer_simple.py  test_spotwrap.py  test_summarize.py  test_utils.py  test_web.py  test_ytwrap.py
tests/_stubs/: soundfile.py
tests/_stubs/librosa/: __init__.py
tests/_stubs/numpy/: __init__.py
tests/_stubs/typer/: __init__.py  testing.py
tests/_stubs/yaml/: __init__.py
